# tplayer

./: .clang-format  CMakeLists.txt  README.md  all.sh  cmake_setup.sh  dbg.sh  rel.sh  setup.sh
cmake/: CompilerWarnings.cmake  Linker.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
lib/ffmpeg/: CMakeLists.txt
lib/openal/: CMakeLists.txt
lib/tbb/: CMakeLists.txt
src/: Coord.hpp  RGB.hpp  Solaris.cpp  Solaris.hpp  TerminalImage.hpp  Tplayer.cpp  Tplayer.hpp  check.hpp  draw_frame_to_terminal.cpp  draw_frame_to_terminal.hpp  frame_to_esqmap.cpp  frame_to_esqmap.hpp  main.cpp  ptr_view.hpp
src/ffmpeg/: Codec.cpp  Codec.hpp  FFmpegAudioFormatConverter.cpp  FFmpegAudioFormatConverter.hpp  FFmpegRaiiFrame.hpp  FFmpegVideoLoader.cpp  FFmpegVideoLoader.hpp  Format.cpp  Format.hpp  FormatHandle.cpp  FormatHandle.hpp  Frame.cpp  Frame.hpp  HWAccelCodec.cpp  HWAccelCodec.hpp  InputHandle.cpp  InputHandle.hpp  MediaLoader.cpp  MediaLoader.hpp  MediaType.hpp  Packet.cpp  Packet.hpp  SWResampler.cpp  SWResampler.hpp  SWScaler.cpp  SWScaler.hpp  VideoScaler.cpp  VideoScaler.hpp  apply_ratio.hpp  apply_time_ratio.hpp  convert_audio_buffer.cpp  convert_audio_buffer.hpp  decode_multi_packet.cpp  decode_multi_packet.hpp  decode_packet.cpp  decode_packet.hpp  decode_video_packet.cpp  decode_video_packet.hpp  read_packet.cpp  read_packet.hpp  (+8 more)
src/fs/: load_file_str.cpp  load_file_str.hpp
src/openal/: Buffer.cpp  Buffer.hpp  Device.cpp  Device.hpp  OpenAlBuffer.cpp  OpenAlBuffer.hpp  OpenAlDevice.cpp  OpenAlDevice.hpp  OpenAlStreamingSource.cpp  OpenAlStreamingSource.hpp  StreamingSource.cpp  StreamingSource.hpp
src/terminal/: Terminal.cpp  Terminal.hpp  TerminalEmulator.cpp  TerminalEmulator.hpp  get_window_size.cpp  get_window_size.hpp
src/terminal/esq_sequance/: header.hpp  reset_attrs.hpp  rgb_str.hpp  rmcup.hpp  smcup.hpp
src/tplayer/: DrawMethod.hpp  HWAccelDevice.hpp  Settings.cpp  Settings.hpp  compute_scaling_factor.cpp  compute_scaling_factor.hpp  end_write_frame.cpp  end_write_frame.hpp  init_cache_space.cpp  init_cache_space.hpp  main.cpp  parse_cmd_arguments.cpp  parse_cmd_arguments.hpp  prepare_to_write_audio_frame.cpp  prepare_to_write_audio_frame.hpp  prepare_to_write_video_frame.cpp  prepare_to_write_video_frame.hpp  write_audio_frame.cpp  write_audio_frame.hpp  write_video_frame.cpp  write_video_frame.hpp
src/util/: DebugVariable.hpp  fcheck.hpp  integer_to_chars.hpp
